--- a/assets/langs/default-3-lc.txt
+++ b/assets/langs/default-3-lc.txt
@@ -1,3 +1,7 @@
-:x:{{{{4}clp, [3,2]}rsq}\909b,2,0.1}asymclip;
-:z:{{{8}clp,[1,0]}rsq}\909closed;
-> {:x:,:z:}sum;
+//8-bit style synthesis
+:baseFreq:{{2}clt,[1],[50,100,200,150]}rsq;
+{{20}clt, 0, :baseFreq:}toJS;
+
+:arpFreq:{{80}clt, [1], [50,4000,300,500]}rsq;
+:freq:{{0}fromJS,:arpFreq:}add;
+>{:freq:}sqr;
