--- a/assets/langs/default-3-lc.txt
+++ b/assets/langs/default-3-lc.txt
@@ -1,7 +1,1 @@
-//8-bit style synthesis
-:baseFreq:{{2}clt,[1],[50,100,200,150]}rsq;
-{{20}clt, 0, :baseFreq:}toJS;
-
-:arpFreq:{{80}clt, [1], [50,4000,300,500]}rsq;
-:freq:{{0}fromJS,:arpFreq:}add;
->{:freq:}sqr;
+{{25}imp, 0, {1}saw}toJS;
