--- a/test/fixtures/lang/default-1-dsp.json
+++ b/test/fixtures/lang/default-1-dsp.json
@@ -1,5 +1,5 @@
 {
-  "setup": "() => {let q=this.newq();  q.b0u2 = new Maximilian.maxiOsc(); q.b0u2.phaseReset(0);; ;; return q;}",
+  "setup": "() => {let q=this.newq();  q.b0u2 = new Module.maxiOsc(); q.b0u2.phaseReset(0);; ;; return q;}",
   "loop": "(q, inputs, mem) => {this.dacOutAll(q.b0u2.sinewave(550));}",
   "paramMarkers": []
 }
