--- a/test/langs/default-grammar.txt
+++ b/test/langs/default-grammar.txt
@@ -9,9 +9,12 @@ const lexer = moo.compile({
   paramBegin:     /{/,
   listEnd:        /\]/,
   listBegin:      /\[/,
+  lambdaEnd:        /\)/,
+  lambdaBegin:      /\(/,
+  lambdaVarListEnd: /\@/,
   dacoutCh:       /\>[0-9]+/,
   dacout:         /\>/,
-  variable:       /:[a-zA-Z0-9]+:/,
+  variable:       { match: /:[a-zA-Z0-9]+:/, value: x => x.slice(1,x.length-1)},
   sample:         { match: /\\[a-zA-Z0-9]+/, lineBreaks: true, value: x => x.slice(1, x.length)},
   slice:          { match: /\|[a-zA-Z0-9]+/, lineBreaks: true, value: x => x.slice(1, x.length)},
   stretch:        { match: /\@[a-zA-Z0-9]+/, lineBreaks: true, value: x => x.slice(1, x.length)},
@@ -65,6 +68,33 @@ Expression ->
   |
   %dacoutCh _ Expression
   {% d => sema.synth( 'dac', [d[2], sema.num(d[0].value.substr(1))] ) %}
+  |
+  %variable _ Lambda
+  {% d => sema.setvar( d[0].value, d[2] ) %}
+  |
+  ParameterList _ %variable
+  {% d => ( { '@lambdacall': {'params':d[0]['@params'], 'lambda':d[2] }} ) %}
+
+  
+  
+Lambda ->
+  %lambdaBegin _ LambdaVarBlock _ Expression _ %lambdaEnd
+   {% d=> ({
+     	'@lambda':
+     		{'vars':d[2], 
+             'tree':d[4]}
+  	}) %}
+   
+LambdaVarBlock -> LambdaVarList _ %lambdaVarListEnd
+	{% d => (d[0] ) %}
+    
+LambdaVarList -> 
+	%variable  
+	{% d => ( [ d[0] ] ) %}
+    |
+  	%variable _ %separator _ LambdaVarList
+  	{% d => [ d[0] ].concat(d[4]) %}
+
 
 ParameterList ->
   %paramBegin Params %paramEnd
@@ -73,7 +103,7 @@ ParameterList ->
 	%paramBegin _ %paramEnd
   {% d => ( { 'paramBegin': d[0], '@params': [], 'paramEnd': d[2] } ) %}
 
-
+  
 Params ->
   ParamElement
   {% d => ( [ d[0] ] ) %}
