--- a/test/langs/default-grammar.txt
+++ b/test/langs/default-grammar.txt
@@ -14,7 +14,8 @@ const lexer = moo.compile({
   lambdaVarListEnd: /\@/,
   dacoutCh:       /\>[0-9]+/,
   dacout:         /\>/,
-  variable:       { match: /:[a-zA-Z0-9]+:/, value: x => x.slice(1,x.length-1)},
+  variable1:       { match: /:[a-zA-Z0-9]+:/, value: x => x.slice(1,x.length-1)},
+  variable2:       { match: /[a-zA-Z0-9]+:/, value: x => x.slice(0,x.length-1)},
   sample:         { match: /\\[a-zA-Z0-9]+/, lineBreaks: true, value: x => x.slice(1, x.length)},
   slice:          { match: /\|[a-zA-Z0-9]+/, lineBreaks: true, value: x => x.slice(1, x.length)},
   stretch:        { match: /\@[a-zA-Z0-9]+/, lineBreaks: true, value: x => x.slice(1, x.length)},
@@ -60,7 +61,7 @@ Expression ->
   ParameterList _ %stretch
   {% d => sema.synth( 'stretch', d[0]['@params'].concat( [ sema.str( d[2].value ) ] ) ) %}
   |
-  %variable _ Expression
+  Variable _ Expression
   {% d => sema.setvar( d[0].value, d[2] ) %}
   |
   %dacout _ Expression
@@ -69,10 +70,10 @@ Expression ->
   %dacoutCh _ Expression
   {% d => sema.synth( 'dac', [d[2], sema.num(d[0].value.substr(1))] ) %}
   |
-  %variable _ Lambda
+  Variable _ Lambda
   {% d => sema.setvar( d[0].value, d[2] ) %}
   |
-  ParameterList _ %variable
+  ParameterList _ Variable
   {% d => ( { '@lambdacall': {'params':d[0]['@params'], 'lambda':d[2] }} ) %}
 
   
@@ -89,10 +90,10 @@ LambdaVarBlock -> LambdaVarList _ %lambdaVarListEnd
 	{% d => (d[0] ) %}
     
 LambdaVarList -> 
-	%variable  
+	Variable  
 	{% d => ( [ d[0] ] ) %}
     |
-  	%variable _ %separator _ LambdaVarList
+  	Variable _ %separator _ LambdaVarList
   	{% d => [ d[0] ].concat(d[4]) %}
 
 
@@ -121,12 +122,13 @@ ParamElement ->
   Expression
   {% id %}
   |
-  %variable
+  Variable
   {% d => sema.getvar( d[0].value ) %}
   |
   %listBegin Params  %listEnd
   {% d => ( { '@list': d[1] } )%}
 
+Variable -> %variable1 {% id %} | %variable2 {% id %}
 
 # Whitespace
 
